src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Variant__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Answer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>